# almpose

./: CMakeLists.txt  CMakeLists_ros.txt  README.md  main.cpp  package.xml
configs/camera/: gen3_default.bias  gen4_10kHz.bias  gen4_camera.yaml
configs/markers/: default.yaml  liftoff.yaml
include/: camera.hpp  detection_algorithm.hpp  event_reader.hpp  logger.hpp  markers.hpp  runtime_manager.hpp  tracker.hpp
include/utils/: buffers.hpp  csvfile.h  options.hpp  types.hpp  visualization.hpp
src/: camera.cpp  detection_algorithm.cpp  event_reader.cpp  logger.cpp  logger_no_ros.cpp  markers.cpp  runtime_manager.cpp  tracker.cpp
src/utils/: buffers.cpp  options.cpp  visualization.cpp
